minor changes in text and code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Star's Wee Lil Website</title>
+    <title>Star's Corner</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="icon" type="image/webp" href="finn2.webp">
     <style>
@@ -81,19 +81,19 @@
     <div class="container mx-auto px-4 py-12 max-w-3xl relative z-10">
         <header class="text-center mb-12">
             <h1 class="text-5xl font-bold text-blue-800">Star</h1>
-			<h6 class="text-1xl font-bold text-blue-500">website made by DaemonCribb <3 </h6>
+			<h6 class="text-1xl font-bold text-blue-500">website made by DaemonCribb <3</h6>
             <p class="text-1g text-blue-700 mt-1">...welcome to my personal space...</p>
         </header>
 
         <section class="bg-blue-50 p-8 rounded-lg shadow-md mb-12">
-            <h2 class="text-3xl font-semibold text-blue-800 mb-4">About Me</h2>
+            <h2 class="text-3xl font-semibold text-blue-800 mb-4">About Star</h2>
             <p class="text-blue-600 leading-relaxed">
-                heya, i'm star! I'm passionate about creativity, technology, and connecting with people. in my free time, you can find me playing games (dandys world) or at school. thanks for visiting my corner of the internet!
+                heya, i'm star! I'm passionate about creativity, technology, and connecting with people. i use he/they pronouns and yes i glaze finn (as seen in my discord profile). in my free time, you can find me playing games (dandys world) or at school. thanks for visiting my corner of the internet!
             </p>
         </section>
 
         <section class="text-center">
-            <h2 class="text-3xl font-semibold text-blue-800 mb-6">Connect with Me</h2>
+            <h2 class="text-3xl font-semibold text-blue-800 mb-6">reach out to me!</h2>
             <div class="flex justify-center space-x-6 flex-wrap">
                 <a href="https://www.tiktok.com/@xst4rzz_x09" target="_blank" class="text-blue-500 hover:text-blue-700 transition text-lg font-medium">TikTok</a>
                 <a href="https://open.spotify.com/user/31eu2jjr5weobq2m3rpan2xnq7ee" target="_blank" class="text-blue-500 hover:text-blue-700 transition text-lg font-medium">Spotify</a>
@@ -106,3 +106,4 @@
     </div>
 </body>
 </html>
+
